updated prov-toolbox-plugin